# INFO-H502-Project

./: .gitignore  CMakeLists.txt  Readme.md
LAB03/: CMakeLists.txt
LAB03/solutions/ex04/: sol04.cpp
Source/: CMakeLists.txt  lightInput.h  main.cpp  shaderInput.h
